# sidekick-ai

./: .env-example  README.md  app.py  pyproject.toml
agents/: sidekick.py
tools/: tools.py
