[project]
name = "sidekick-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-experimental>=0.3.4",
    "langgraph>=0.4.8",
    "playwright>=1.52.0",
    "pydantic>=2.11.5",
]
